[package]
name = "msgpacknet"
version = "0.1.0"
authors = ["Dennis Schwerdel <schwerdel@googlemail.com>"]
license = "GPL-3.0"
description = "A networking layer based on MessagePack messages."
homepage = "https://github.com/dswd/msgpacknet.rs"
repository = "https://github.com/dswd/msgpacknet.rs"
documentation = "http://dswd.github.io/msgpacknet.rs/msgpacknet/index.html"
keywords = ["networking", "transport", "protocol", "msgpack", "messagepack"]
readme = "README.md"

[dependencies]
serde = "0.6"
rmp-serde = "0.8"
net2 = "0.2"
time = "0.1"
rand = "0.3"
